
ChangeLog
 [ + added, - removed, * changed ]
 * 06Sep2013 Protected includes of system headers by their appropriate #ifdef's
 + 06Sep2013 Added missing licensing headers
 * 05Sep2013 Upgraded to version 3.0rc2
             Major changes to the on-line analysis. The front-end is now launched as a separate process.
 + 05Sep2013 Added a new control (matching_zone) to the communications matching algorithm, so as not to make matches that cross areas where the tracing was disabled.
 * 02Sep2013 Fixing OpenCL instrumentation (added clRetain & clRelease calls)
             Fixed some event mismatches in the OpenCL accelerator side
             Added OpenCL C++ example
 * 30Jul2013 Added overwrite option in <merge> section
             Removed unused 'remove-files' in favor of 'keep-mpits'
             Fix fortran declarations on API
             Fix MPI interfaces declarations
 * 29Jul2013 Fixed generation of codelocation & user function in nanos stacked
 + 19Jul2013 Add CPU information at begin & end of
               - routine executing pthread_create
               - OpenMP worksharing, function, ... *
             Add multiple overhead tests
 + 17Jul2013 Added overhead tests
 * 15Jul2013 Fixed OpenCL timing issues, added MPI+OpenCL example
 * 09Jul2013 Fix sampling handler callstack level
 * 08Jul2013 Allow OpenMP user code to generate samples again
             Moved Extrae_set_initial_taskid at the very beginning
 * 04Jul2013 Fix compilation of papi_best_set for PAPI when using CUDA
             Move Extrae_CUDA_fini to cuda_common.c
 * 02Jul2013 Fixed compilation flags for the merger to enable the online support.
             Fixed which events are cached to keep the communicators definitions in the online analysis. 
             The first spectral analysis now applies windowing to the first 10% of the data.
             Fixed missing dependencies in the online libraries.
             Fixed report message for the circular buffer when parsing the XML configuration.